--- a/geteway/src/main/resources/application.yaml
+++ b/geteway/src/main/resources/application.yaml
@@ -16,3 +16,11 @@ spring:
           uri: http://localhost:8010/
           predicates:
             - Path=/friends/**
+        - id: chats
+          uri: http://localhost:8012/
+          predicates:
+            - Path=/chat/**
+        - id: notify
+          uri: http://localhost:8015/
+          predicates:
+            - Path=/notify/**
